# adelia1

./: Cargo.toml  README.md  e.html
src/: main.rs
static/: styles.css
templates/: index.html
